force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Required_Equipment_to_Complete_Task__c.field-meta.xml
<CustomField>
    <fullName>aos_Required_Equipment_to_Complete_Task__c</fullName>
    <inlineHelpText>Do I have ALL the required tools, PPE and equipment for the task?</inlineHelpText>
    <label>Required Equipment to Complete Task</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>