force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Rescue_Group__c.field-meta.xml
<CustomField>
    <fullName>aos_Rescue_Group__c</fullName>
    <label>Rescue Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>