force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Resources__c.field-meta.xml
<CustomField>
    <fullName>aos_Resources__c</fullName>
    <label>Resources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PPE</fullName>
            </value>
            <value>
                <fullName>Assisting Inspector</fullName>
            </value>
            <value>
                <fullName>Raid kit</fullName>
            </value>
            <value>
                <fullName>Horse float</fullName>
            </value>
            <value>
                <fullName>Dog trailer</fullName>
            </value>
            <value>
                <fullName>Specialised Animal Handling Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>