force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Risks__c.field-meta.xml
<CustomField>
    <fullName>aos_Risks__c</fullName>
    <label>Risks</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Bite</fullName>
            </value>
            <value>
                <fullName>Zoonotic disease</fullName>
            </value>
            <value>
                <fullName>Verbal or phsyical aggression</fullName>
            </value>
            <value>
                <fullName>Weapons on property</fullName>
            </value>
            <value>
                <fullName>Remote location</fullName>
            </value>
            <value>
                <fullName>Psychological safety</fullName>
            </value>
            <value>
                <fullName>High Impact (large number of animals)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>