force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Risks_Details__c.field-meta.xml
<CustomField>
    <fullName>aos_Risks_Details__c</fullName>
    <label>Risks Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>