force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Scope__c.field-meta.xml
<CustomField>
    <fullName>aos_Scope__c</fullName>
    <label>Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>