force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Seized_Reason__c.field-meta.xml
<CustomField>
    <fullName>aos_Seized_Reason__c</fullName>
    <label>Seized Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>