force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Sheltermate_User_ID__c.field-meta.xml
<CustomField>
    <fullName>aos_Sheltermate_User_ID__c</fullName>
    <label>Sheltermate User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>