force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Skills_Required_to_Complete_Task__c.field-meta.xml
<CustomField>
    <fullName>aos_Skills_Required_to_Complete_Task__c</fullName>
    <inlineHelpText>Do I have the required training, skills and licences to carry out the task safely?</inlineHelpText>
    <label>Skills Required to Complete Task Safely</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>