force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Spoke_to_Caller__c.field-meta.xml
<CustomField>
    <fullName>aos_Spoke_to_Caller__c</fullName>
    <label>Spoke to Caller</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>