force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Supervisor_Engagement_Support__c.field-meta.xml
<CustomField>
    <fullName>aos_Supervisor_Engagement_Support__c</fullName>
    <label>Supervisor Engagement / Support</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>