force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Understand_Requirements_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>aos_Understand_Requirements_to_Complete__c</fullName>
    <inlineHelpText>Have I read &amp; understood the Risk Assessment / SOP or Work Instruction for the task?</inlineHelpText>
    <label>Understand Requirements to Complete Job</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>