force-app/main/default/objects/animalos__Job_Activity__c/fields/aos_Verbal_Direction__c.field-meta.xml
<CustomField>
    <fullName>aos_Verbal_Direction__c</fullName>
    <label>Verbal Direction</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>