force-app/main/default/objects/animalos__Job_Activity__c/recordTypes/aos_Admin.recordType-meta.xml
<RecordType>
    <fullName>aos_Admin</fullName>
    <active>true</active>
    <label>Admin</label>
</RecordType>