force-app/main/default/objects/animalos__Job_Activity__c/recordTypes/aos_Digital_Information_Request.recordType-meta.xml
<RecordType>
    <fullName>aos_Digital_Information_Request</fullName>
    <active>true</active>
    <label>Digital Information Request</label>
</RecordType>