force-app/main/default/objects/animalos__Job_Activity__c/recordTypes/aos_Inspection.recordType-meta.xml
<RecordType>
    <fullName>aos_Inspection</fullName>
    <active>true</active>
    <label>Inspection</label>
</RecordType>