force-app/main/default/objects/animalos__Job_Activity__c/recordTypes/aos_Investigation_Plan.recordType-meta.xml
<RecordType>
    <fullName>aos_Investigation_Plan</fullName>
    <active>true</active>
    <label>Investigation Plan</label>
</RecordType>