force-app/main/default/objects/animalos__Job_Activity__c/recordTypes/aos_Legal_Action.recordType-meta.xml
<RecordType>
    <fullName>aos_Legal_Action</fullName>
    <active>true</active>
    <label>Legal Action</label>
</RecordType>