force-app/main/default/objects/animalos__Job_Activity__c/recordTypes/aos_Rescue_Attendance.recordType-meta.xml
<RecordType>
    <fullName>aos_Rescue_Attendance</fullName>
    <active>true</active>
    <description>Used to capture details about attending a reported rescue.</description>
    <label>Rescue Attendance</label>
</RecordType>