force-app/main/default/objects/animalos__Job_Activity__c/recordTypes/aos_Safety_Declaration.recordType-meta.xml
<RecordType>
    <fullName>aos_Safety_Declaration</fullName>
    <active>true</active>
    <label>Safety Declaration</label>
</RecordType>