force-app/main/default/objects/animalos__Job_Activity__c/recordTypes/aos_Trap.recordType-meta.xml
<RecordType>
    <fullName>aos_Trap</fullName>
    <active>true</active>
    <label>Trap</label>
</RecordType>